tests/snapshots/snapshots/snapshot_tests__snapshots__cli_output__list_robot_json.snap
---
source: tests/snapshots/cli_output.rs
expression: json
---
{
  "count": 3,
  "skills": [
    {
      "author": null,
      "deprecation_reason": null,
      "description": "Standard Git workflow patterns for feature development.",
      "id": "git-workflow",
      "is_deprecated": false,
      "layer": "project",
      "name": "Git Workflow",
      "quality_score": 0.3650000095367432,
      "version": "0.1.0"
    },
    {
      "author": null,
      "deprecation_reason": null,
      "description": "Use Result<T, E> for recoverable errors and panic! for unrecoverable ones.",
      "id": "rust-error-handling",
      "is_deprecated": false,
      "layer": "project",
      "name": "Rust Error Handling",
      "quality_score": 0.48500001430511475,
      "version": "0.1.0"
    },
    {
      "author": null,
      "deprecation_reason": null,
      "description": "Guidelines for writing effective tests.",
      "id": "testing-best-practices",
      "is_deprecated": false,
      "layer": "project",
      "name": "Testing Best Practices",
      "quality_score": 0.3650000095367432,
      "version": "0.1.0"
    }
  ],
  "status": "ok"
}
