tests/snapshots/snapshots/snapshot_tests__snapshots__cli_output__search_human.snap
---
source: tests/snapshots/cli_output.rs
expression: sanitized
---
1 results for 'rust' (hybrid search):

1.   Rust Error Handling project
     rust-error-handling (score: 0.008, quality: 0.49)
     Use Result<T, E> for recoverable errors and panic! for unrecoverable ones.
